[package]
name = "mates-rs"
version = "1.0.0"
authors = ["Markus Unterwaditzer <markus@unterwaditzer.net>", "Shaleen Jain <shaleen@jain.sh>"]
license = "MIT"
keywords = ["vdir", "vcard", "contacts", "addressbook"]
readme = "README.md"

description = "A very simple commandline addressbook"
documentation = "https://github.com/shalzz/mates.rs"
homepage = "https://github.com/shalzz/mates.rs"
repository = "https://github.com/shalzz/mates.rs"

edition = "2018"

[[bin]]
name = "mates"
path = "src/main.rs"

[dependencies]
uuid = { version = "0.5", features = ["v4"] }
atomicwrites = "0.3"
email = "0.0"
clap = { version = "3.1", features = ["cargo"]}
vobject = "0.7"
cursive = "0.17"
anyhow = "1.0"
